syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesfoce.apollo.demesne.proto";
option java_outer_classname = "DemesneProto";
option objc_class_prefix = "Dmsp";

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

import "choam.proto";
import "stereotomy.proto";
import "util.proto";

package apollo.demesne;

service DemesneNet {
    rpc gossip (google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message DemesneParameters {
    string commDirectory = 1;
    stereotomy.Ident member = 2;
    bytes keyStore = 3; 
    string outbound = 4; 
    utils.Digeste context = 5;
    string signingService = 6;
    google.protobuf.Duration keepAlive = 7;
    apollo.choam.FoundationSeal foundation = 8;
    google.protobuf.Duration timeout = 9;
    string loggingConfig = 10;
}

message ViewChange {
    utils.Digeste view = 1;
    repeated stereotomy.EventCoords joining = 2;
    repeated utils.Digeste leaving = 3;
}

service OuterContext {
    rpc register (SubContext) returns(google.protobuf.Empty) {}
    rpc deregister (utils.Digeste) returns(google.protobuf.Empty) {}
}

message SubContext {
    utils.Digeste enclave = 1;
    utils.Digeste context = 2;
}
